--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
