--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "fathom-client": "^3.5.0",
     "next": "12.2.2",
     "next-share": "^0.12.1",
+    "next-sitemap": "^3.1.11",
     "postmark": "^3.0.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
